# pf-scout

./: .review-council.yml  LICENSE  README.md  SPEC.md  pyproject.toml  setup.py
.github/workflows/: ci.yml  review.yml
docs/: collectors.md  contributing.md  install.md  privacy.md  quickstart.md  rubrics.md
pf_scout/: __init__.py  cli.py  db.py  fingerprint.py  models.py  rubric.py  schema.py  scoring.py
pf_scout/collectors/: base.py  github.py  postfiat.py
pf_scout/commands/: add.py  archive.py  diff.py  doctor.py  export.py  init.py  link.py  list.py  merge.py  note.py  prospect.py  report.py  rerank.py  seed.py  seed_postfiat.py  set_context.py  show.py  tag.py  update.py  wizard.py
rubrics/: b1e55ed.yaml  pf-default.yaml
tests/: test_basic.py  test_prospect.py
