[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pf-scout"
version = "0.1.0"
description = "Contact intelligence database for Post Fiat contributor recruitment"
requires-python = ">=3.10"
license = "MIT"
dependencies = ["click>=8.0", "pyyaml>=6.0", "requests>=2.28"]

[project.scripts]
pf-scout = "pf_scout.cli:cli"

[project.optional-dependencies]
dev = ["pytest>=7.0", "ruff>=0.1"]

[tool.setuptools.packages.find]
include = ["pf_scout*"]
